css/index.css
@import url("https://fonts.googleapis.com/css2?family=DM+Sans&display=swap");
*, ::before, ::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: "DM Sans", sans-serif;
}

a {
  text-decoration: none;
}

li {
  list-style: none;
}

img, video {
  object-fit: cover;
}

#header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 6.9444444444vw 0;
  height: 9.5833333333vw;
}

#header .logo {
  height: 3.4722222222vw;
}

#header h1 {
  color: #901C1C;
  font-size: 2.5vw;
  font-weight: 400;
  line-height: 3.2638888889vw;
}

.photographer_banner {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 6.9444444444vw 0;
  border-radius: 5px;
  padding: 0 3.4722222222vw;
  height: 21.7361111111vw;
  background-color: #FAFAFA;
}

.photographer_banner .name {
  font-size: 4.4444444444vw;
  font-weight: 400;
  line-height: 5.7638888889vw;
}

.photographer_banner .location {
  font-size: 1.6666666667vw;
  font-weight: 400;
  line-height: 2.1527777778vw;
}

.photographer_banner .tagline {
  margin-top: 1.3194444444vw;
  font-size: 1.25vw;
  font-weight: 400;
  line-height: 1.5972222222vw;
}

.photographer_banner .btn-contact {
  padding: 1.4583333333vw 0.7638888889vw;
  font-size: 1.3888888889vw;
  font-weight: 700;
  line-height: 1.8055555556vw;
}

.photographer_gallery {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  margin: 1.5972222222vw 6.9444444444vw 0;
}

.caption {
  display: flex;
  justify-content: space-between;
  margin: 0.6944444444vw 0 2.0833333333vw;
  color: #901C1C;
  font-size: 1.6666666667vw;
  font-weight: 400;
  line-height: 2.1527777778vw;
}

.caption .title {
  overflow: hidden;
  width: 20.1388888889vw;
  text-overflow: ellipsis;
  white-space: nowrap;
}

button {
  border-radius: 5px;
  border: none;
  padding: 1.5972222222vw 1.25vw;
  background-color: #911C1C;
  color: white;
  font-family: inherit;
  font-size: 1.25vw;
  font-weight: 700;
  line-height: 1.5972222222vw;
  cursor: pointer;
}

.btn-contact:hover {
  background-color: #DB8876;
  color: black;
}

.portrait {
  border-radius: 50%;
  width: 13.8888888889vw;
  height: 13.8888888889vw;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
}

.insert {
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: fixed;
  background-color: #DB8876;
  color: black;
  right: 2.5vw;
  bottom: 0;
  z-index: 5;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
  padding: 0 2.3611111111vw 0 2.1527777778vw;
  width: 26.1111111111vw;
  height: 4.7222222222vw;
  font-size: 1.6666666667vw;
  font-weight: 700;
  line-height: 2.1527777778vw;
}

.media {
  border-radius: 5px;
  width: 24.3055555556vw;
  height: 20.8333333333vw;
}

img {
  border-radius: inherit;
  width: 100%;
  height: 100%;
}

.filters {
  display: flex;
  align-items: center;
  margin: 0.625vw 6.9444444444vw 0;
  font-size: 1.25vw;
  font-weight: 700;
  line-height: 1.5972222222vw;
}

.filters-dropdown {
  position: relative;
  margin-left: 1.7361111111vw;
}

.filters-selected {
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-radius: 5px;
  padding: 1.5277777778vw 1.3888888889vw;
  width: 11.8055555556vw;
  background-color: #911C1C;
  color: white;
  cursor: pointer;
}

.filters-value {
  margin-right: 1.8055555556vw;
}

.filters-option {
  position: absolute;
  top: 0;
  display: none;
  border-radius: 5px;
  width: 100%;
  padding: 1.5277777778vw 0.6944444444vw;
  background-color: #911C1C;
  color: white;
}

.filters-item {
  padding: 0 0.6944444444vw;
  cursor: pointer;
}

.filters-item:last-child, .filters-item:nth-child(2) {
  padding-top: 0.9722222222vw;
}

.filters-item:first-child, .filters-item:nth-child(2) {
  padding-bottom: 0.9722222222vw;
}

.filters-item:nth-child(2) {
  border-top: 1px solid white;
  border-bottom: 1px solid white;
}

.filters-button {
  position: absolute;
  z-index: 5;
  top: 1.5972222222vw;
  right: 1.3888888889vw;
  padding: 0;
  transform: rotate(0deg);
  transition: transform 0.3s linear;
}

.filters-button.open {
  transform: rotate(180deg);
  transition: transform 0.3s linear;
}

.modal-bg {
  position: fixed;
  top: 0;
  z-index: 10;
  overflow: auto;
  display: none;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.modal {
  display: flex;
  align-items: center;
}

#contact {
  background-color: rgba(196, 196, 196, 0.4);
}

#contact .modal {
  flex-direction: column;
  border-radius: 5px;
  padding: 0 35px;
  width: 669px;
  height: auto;
  background-color: #DB8876;
  mix-blend-mode: normal;
  filter: drop-shadow(-5px 10px 30px rgba(0, 0, 0, 0.25));
}

#contact header {
  display: flex;
  justify-content: space-between;
  align-items: baseline;
  margin: 15px 35px 19px;
  width: 100%;
}

#contact header img {
  width: 42px;
  height: 42px;
  cursor: pointer;
}

#contact header h1 {
  font-size: 64px;
  font-weight: normal;
  line-height: 83px;
}

.modal-body {
  margin: 0 0 38px;
  width: 100%;
}

#contact-form .formData {
  display: flex;
  flex-direction: column;
}

#contact-form label {
  color: #312E2E;
  font-size: 36px;
  line-height: 47px;
}

#contact-form input {
  height: 68px;
}

#contact-form textarea {
  height: 170px;
  scrollbar-width: thin;
  resize: none;
}

#contact-form .text-control {
  border: 2px solid transparent;
  border-radius: 5px;
  outline: none;
  padding: 8px 20px;
  width: 100%;
  font-family: inherit;
  font-size: 24px;
  line-height: 31px;
}

#contact-form .message {
  margin: 10px 0 26px;
}

#contact-form .submit-button {
  padding: 23px 50px;
  font-size: 18px;
  line-height: 23px;
}

#contact-form .formData[data-error]::after {
  display: block;
  margin: 8px 0;
  content: attr(data-error);
  color: #901C1C;
  font-size: 14px;
  line-height: 142.6%;
  transition: 0.3s;
}

#contact-form .formData[data-error] .text-control {
  border: 3px solid #911C1C;
}

#lightbox {
  background-color: white;
}

#lightbox .modal {
  position: relative;
  justify-content: center;
}

.lightbox-close {
  position: absolute;
  top: 15px;
  right: -5px;
  width: 42px;
  height: 42px;
}

.lightbox-close::before, .lightbox-close::after {
  position: relative;
  top: 2px;
  left: -6px;
  display: block;
  content: "";
  background-color: #911C1C;
  height: 6px;
  width: 53px;
}

.lightbox-close::before {
  transform: rotate(45deg);
}

.lightbox-close::after {
  top: -4px;
  transform: rotate(-45deg);
}

.lightbox-container {
  margin: 0 34.36px;
}

.modal .media {
  width: 1050px;
  height: 900px;
}

#lightbox .modal button {
  padding: 0;
  background-color: transparent;
  color: #911C1C;
  font-size: 48px;
  line-height: 48px;
}

.lightbox-caption {
  margin-top: 12px;
  color: #911C1C;
  font-size: 24px;
  font-weight: 400;
  line-height: 31px;
}

.photographer_section {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 5.4166666667vw;
  padding: 4.1666666667vw 0 7.7777777778vw;
}

.photographer_section article {
  display: flex;
  justify-content: center;
  justify-self: center;
  align-items: center;
  flex-direction: column;
}

.photographer_section article a {
  text-align: center;
}

.photographer_section .name {
  margin-top: 1.3888888889vw;
  font-size: 2.5vw;
  font-weight: 400;
  line-height: 3.2638888889vw;
}

.photographer_section .location {
  font-size: 0.9027777778vw;
  font-weight: 400;
  line-height: 1.1805555556vw;
}

.photographer_section .tagline {
  margin: 0.2083333333vw auto;
  font-size: 0.6944444444vw;
  font-weight: 400;
  line-height: 0.9027777778vw;
}

.photographer_section .price {
  font-size: 0.625vw;
  font-weight: 400;
  line-height: 0.8333333333vw;
}

.name {
  color: #D3573C;
}

.location {
  color: #901C1C;
}

.tagline {
  color: #525252;
}

.portrait, .media {
  background-color: #C4C4C4;
}

.price {
  color: #757575;
}

/*# sourceMappingURL=index.css.map */

